fix header element align

--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,14 @@
 
 header {
 display:flex;
-flex-direction: row;
+flex-direction: column;
 }
 
 .navbar {
     display:flex;
     flex-direction: row;
-    }
+}
+
+.logo_title{
+ width:150px;
+}
